# storify

./: .dockerignore  .env.example  .gitignore  CHANGELOG  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-ci.yml
api/: db.py  main.py
api/models/: __init__.py  email.py  email_tokens.py  rbac.py  s4.py  settings.py  user.py
api/routes/: html_router.py  jwt.py  s4_router.py  user.py
api/schemas/: s4_schemas.py  user_schemas.py
api/services/: email.py  jwt.py  s4_service.py  user_service.py
api/utils/: email.py  file_handler.py  github_stats.py  jwt.py  logging.py  security.py  shutdown.py  startup.py
api/utils/email_texts/: account_verification.json
frontend/static/: current_year.js
frontend/templates/: about.html  base.html  index.html  navbar.html
frontend/templates/auth/: login.html  register.html
frontend/templates/dashboard/: assets.html  dashboard.html  storify.html
frontend/templates/settings/: profile.html
storify/: package-lock.json  package.json
storify/src/app/: layout.tsx  page.tsx
storify/src/app/signup/: page.tsx
storify/src/components/: Navbar.tsx  PrimaryButton.tsx
tests/: config.py
tests/api_tests/: test_s4.py  test_user_creation.py
