[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storify"
version = "0.1.0"
description = "A simple FastAPI-based server for storing and distributing files"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"

authors = [
    { name = "Arian Ott", email = "arian.ott@ieee.org" }
]

keywords = ["cli", "stories", "snippets", "organiser"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic-settings",
    "python-multipart",
    "python-jose[cryptography]",
    "argon2-cffi",
    "passlib[bcrypt]",
    "pymysql",
    "python-dotenv",
    "requests",
    "jinja2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pytest-xdist",
    "pytest-cov"
]

[project.scripts]
storify = "storify.cli:app"

[project.urls]
Homepage = "https://github.com/arian-ott/storify"
Repository = "https://github.com/arian-ott/storify"
Issues = "https://github.com/arian-ott/storify/issues"

[tool.setuptools]
include-package-data = true
[tool.setuptools]
packages = { find = { include = ["api*", "frontend*"] } }


[tool.pytest.ini_options]
addopts = "-n auto -v"

